ongoing: class Image: url